# metapkg

./: .gitignore  README.md  index.yaml
source/: setup.cfg
source/metapkg/: __init__.py  cli.py  http_method.py  info.py  metapkg.py  utils.py
