[metadata]
name = metapkg
version = attr: metapkg.__version__
author = Ting.
author_email = tingle2008@gmail.com
description = meta pack way


[options]
packages = find:
include_package_data = True
zip_safe = False

install_requires =
	dataclasses	
	pyyaml
	click


[options.entry_points]
console_scripts =
	metapkg = metapkg.cli:mkpkg

[options.package_data]
* = *.dll, *.so, *.pyd
